fix: remove filter due to z-index error

--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -48,6 +48,7 @@
 }
 
 .landing-announcement {
+  user-select: none;
   .el-dialog {
     width: 57.5vw;
   }
@@ -71,7 +72,6 @@
 // dark mode
 .dark {
   .landing-container {
-    filter: brightness(1.075);
     .landing {
 			background-color: darken(@color-primary, 3.75%);
       filter: brightness(0.875);
